objects/Job_Status__c.object
<CustomObject>
    <label>Job Status</label>
    <nameField>
        <displayFormat>JS-{0000}</displayFormat>
        <label>Job Status Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Request sent to Interview Internally</fullName>
                </value>
                <value>
                    <fullName>Internal Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Qualified Candidate</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Qualified Candidate: Pending Candidate Feedback</fullName>
                </value>
                <value>
                    <fullName>Qualified Candidate :Pending Internal Review</fullName>
                </value>
                <value>
                    <fullName>Internally Approved by Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Internally Rejected by Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Internally on Hold by Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Submitted to Client, Pending Client Feedback</fullName>
                </value>
                <value>
                    <fullName>Rejected by Client</fullName>
                </value>
                <value>
                    <fullName>Request sent for Client Interview</fullName>
                </value>
                <value>
                    <fullName>Pre-Engagement Meeting / Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>First Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Second Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Third Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Final Interview Scheduled</fullName>
                </value>
                <value>
                    <fullName>Interview Completed, Pending Client Feedback</fullName>
                </value>
                <value>
                    <fullName>Rejected by Client Post-Interview</fullName>
                </value>
                <value>
                    <fullName>Offer Received</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted :Background/Ref In Process</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted :Background/Ref Completed</fullName>
                </value>
                <value>
                    <fullName>Offer Rejected</fullName>
                </value>
                <value>
                    <fullName>Onboarding in Process</fullName>
                </value>
                <value>
                    <fullName>Onboarding Completed</fullName>
                </value>
                <value>
                    <fullName>First Pre-Engagement Meeting/Interview Re-Scheduled with Client</fullName>
                    <isActive>false</isActive>
                    <label>First Pre-Engagement Meeting/Interview Re-Scheduled with Client</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Internal Interview Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Client Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Sales Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Client Didn&apos;t Pick Up / Show Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Freelance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Status</relationshipLabel>
        <relationshipName>Job_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exemption__c</fullName>
        <label>Exemption</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <label>Role Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Candidate_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Candidate_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>W_2_or_1099__c</fullName>
        <label>W-2 or 1099</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>W-2</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Bill_Rate__c</fullName>
        <label>DT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OT_Bill_Rate__c</fullName>
        <label>OT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Terms__c</fullName>
        <label>Invoice Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <label>Client Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Company__c</fullName>
        <label>Client Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Bonus__c</fullName>
        <label>Completion Bonus?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.Id , Opportunity__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>TEXT( Opportunity__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Allocation__c</fullName>
        <label>Credit Allocation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Title__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.Id , Opportunity__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_End_Date__c</fullName>
        <label>Estimated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursed_Expenses__c</fullName>
        <label>Reimbursed Expenses?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Received_Notes__c</fullName>
        <label>Offer Received Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Rejected_Notes__c</fullName>
        <label>Offer Rejected Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Interview_Date__c</fullName>
        <label>Client Interview Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Permission_to_work_OT__c</fullName>
        <label>Permission to work OT?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_or_Existing_Client__c</fullName>
        <label>New or Existing Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Check_Needed__c</fullName>
        <label>Background Check Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Interview_Status__c</fullName>
        <label>Client Interview Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Client Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Sales Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Client Didn&apos;t Pick Up / Show Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Interview_Subject__c</fullName>
        <label>Client Interview Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Company_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Opportunity__r.AccountId, Opportunity__r.Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Interview_Duration__c</fullName>
        <formula>Client_Interview_Start_Date_Time__c  - Client_Interview_End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Interview Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Interview_Location__c</fullName>
        <label>Client Interview Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_by_Client_Reason__c</fullName>
        <label>Rejected by Client Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salary_Pay_Rate_Discussed__c</fullName>
        <label>Salary/ Pay Rate Discussed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_Subject__c</fullName>
        <label>Internal Interview Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_Duration__c</fullName>
        <formula>Client_Interview_Start_Date_Time__c -  Client_Interview_End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Interview Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_Location__c</fullName>
        <label>Internal Interview Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Interview_Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Interview Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Interview_End_Date_Time__c</fullName>
        <label>Client Interview End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Interview Assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Clients_get_Weekly_Reporting__c</fullName>
        <label>Do Clients get Weekly Reporting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Hold_by_Sales_Manager_Reason__c</fullName>
        <label>On Hold by Sales Manager Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Interview_Start_Date_Time__c</fullName>
        <label>Client Interview Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_End_Date_Time__c</fullName>
        <label>Internal Interview End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejected_by_Sales_Manager_Reason__c</fullName>
        <label>Rejected by Sales Manager Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_Scheduled_Date__c</fullName>
        <label>Internal Interview Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>internal_interview_even_record_id__c</fullName>
        <description>internal interview even record id</description>
        <label>internal interview even record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Interview_Start_Date_Time__c</fullName>
        <label>Internal Interview Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Contacts_that_Receive_Invoices__c</fullName>
        <label>Client Contacts that Receive Invoices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Contacts_Receive_Invoice_Copies__c</fullName>
        <label>Client Contacts Receive Invoice Copies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_Background_In_Completed__c</fullName>
        <label>Offer Accepted Background In Completed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_receives_the_weekly_reporting_temp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who receives the weekly reporting ?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Candidate_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Accepted_Background_Ref_In_Progres__c</fullName>
        <label>Offer Accepted Background In Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_by_Client_Post_Interview_Reason__c</fullName>
        <label>Rejected by Client Post-Interview Reason</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>Candidate_Status</fullName>
        <active>true</active>
        <description>default</description>
        <label>Candidate Status</label>
    </recordTypes>
    <validationRules>
        <fullName>Internal_Interview_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
( Internal_Interview_Start_Date_Time__c &gt; Internal_Interview_End_Date_Time__c  ) ,
(Internal_Interview_Start_Date_Time__c - Internal_Interview_End_Date_Time__c &gt; 0 )
)</errorConditionFormula>
        <errorMessage>Internal Interview start date should be earlier than  Internal Interview end date</errorMessage>
    </validationRules>
</CustomObject>